--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
         text-decoration: none;
         color: #fff;
         width: 110px; 
-        padding: 10px 0 10px 0;
+        height: 35px; /* 추가 */
+        line-height: 35px; /* 추가 */
+        /* padding: 10px 0 10px 0; */
         text-align: center;
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;
